# MPS-AGH-2025-project

./: .gitignore  README.md  pyproject.toml  setup_scripts.py
.github/actions/setup/: action.yml
.github/workflows/: test.yml
src/: poisonn.py
src/PyMPDATA/pympdata.egg-info/: PKG-INFO
src/mps_agh_2025_project/: __init__.py  sim_pde.py  sim_py_pde.py  sim_pympdata.py  utils.py
test/: test_performance.py  test_scalability.py  test_similarity.py  test_stability.py
